chap3/y.output
State 89 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: exp

    2 decs: dec decs
    3     | /* empty */

    4 dec: tydec
    5    | vardec
    6    | fundec

    7 tydec: TYPE ID EQ ty

    8 ty: ID
    9   | LBRACE tyfields RBRACE
   10   | ARRAY OF ID

   11 tyfields: /* empty */
   12         | tyfieldlist

   13 tyfieldlist: ID COLON ID
   14            | tyfieldlist COMMA ID COLON ID

   15 vardec: VAR ID ASSIGN exp
   16       | VAR ID COLON ID ASSIGN exp

   17 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   18       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   19 exp: lvalue
   20    | NIL
   21    | LPAREN exp SEMICOLON seq RPAREN
   22    | LPAREN RPAREN
   23    | INT
   24    | STRING
   25    | MINUS exp
   26    | ID LPAREN RPAREN
   27    | ID LPAREN parlist RPAREN
   28    | exp PLUS exp
   29    | exp MINUS exp
   30    | exp TIMES exp
   31    | exp DIVIDE exp
   32    | exp EQ exp
   33    | exp NEQ exp
   34    | exp GT exp
   35    | exp LT exp
   36    | exp GE exp
   37    | exp LE exp
   38    | exp AND exp
   39    | exp OR exp
   40    | ID LBRACE itemlist RBRACE
   41    | ID LBRACE RBRACE
   42    | ID LBRACK exp RBRACK OF exp
   43    | lvalue ASSIGN exp
   44    | IF exp THEN exp ELSE exp
   45    | IF exp THEN exp
   46    | WHILE exp DO exp
   47    | FOR ID ASSIGN exp TO exp DO exp
   48    | BREAK
   49    | LET decs IN seq END
   50    | LET decs IN END
   51    | LPAREN exp RPAREN

   52 lvalue: ID lsuf

   53 lsuf: /* empty */
   54     | LBRACK exp RBRACK lsuf
   55     | DOT ID lsuf

   56 seq: exp
   57    | seq SEMICOLON exp

   58 parlist: exp
   59        | parlist COMMA exp

   60 itemlist: ID EQ exp
   61         | itemlist COMMA ID EQ exp


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 7 8 10 13 14 15 16 17 18 26 27 40 41 42 47 52 55 60 61
STRING (259) 24
INT (260) 23
COMMA (261) 14 59 61
COLON (262) 13 14 16 18
SEMICOLON (263) 21 57
LPAREN (264) 17 18 21 22 26 27 51
RPAREN (265) 17 18 21 22 26 27 51
LBRACK (266) 42 54
RBRACK (267) 42 54
LBRACE (268) 9 40 41
RBRACE (269) 9 40 41
DOT (270) 55
PLUS (271) 28
MINUS (272) 25 29
TIMES (273) 30
DIVIDE (274) 31
EQ (275) 7 17 18 32 60 61
NEQ (276) 33
LT (277) 35
LE (278) 37
GT (279) 34
GE (280) 36
AND (281) 38
OR (282) 39
ASSIGN (283) 15 16 43 47
ARRAY (284) 10
IF (285) 44 45
THEN (286) 44 45
ELSE (287) 44
WHILE (288) 46
FOR (289) 47
TO (290) 47
DO (291) 46 47
LET (292) 49 50
IN (293) 49 50
END (294) 49 50
OF (295) 10 42
BREAK (296) 48
NIL (297) 20
FUNCTION (298) 17 18
VAR (299) 15 16
TYPE (300) 7
ARRAYDECLSTMT (301)
FORSTMT (302)
WHILESTMT (303)
IFELSESTMT (304)
IFSTMT (305)
NEGATIVE (306)


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1, on right: 0
decs (54)
    on left: 2 3, on right: 2 49 50
dec (55)
    on left: 4 5 6, on right: 2
tydec (56)
    on left: 7, on right: 4
ty (57)
    on left: 8 9 10, on right: 7
tyfields (58)
    on left: 11 12, on right: 9 17 18
tyfieldlist (59)
    on left: 13 14, on right: 12 14
vardec (60)
    on left: 15 16, on right: 5
fundec (61)
    on left: 17 18, on right: 6
exp (62)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43 44 45 46 47 48 49 50 51, on right: 1 15 16
    17 18 21 25 28 29 30 31 32 33 34 35 36 37 38 39 42 43 44 45 46
    47 51 54 56 57 58 59 60 61
lvalue (63)
    on left: 52, on right: 19 43
lsuf (64)
    on left: 53 54 55, on right: 52 54 55
seq (65)
    on left: 56 57, on right: 21 49 57
parlist (66)
    on left: 58 59, on right: 27 59
itemlist (67)
    on left: 60 61, on right: 40 61


state 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program  go to state 12
    exp      go to state 13
    lvalue   go to state 14


state 1

   26 exp: ID . LPAREN RPAREN
   27    | ID . LPAREN parlist RPAREN
   40    | ID . LBRACE itemlist RBRACE
   41    | ID . LBRACE RBRACE
   42    | ID . LBRACK exp RBRACK OF exp
   52 lvalue: ID . lsuf

    LPAREN  shift, and go to state 15
    LBRACK  shift, and go to state 16
    LBRACE  shift, and go to state 17
    DOT     shift, and go to state 18

    $default  reduce using rule 53 (lsuf)

    lsuf  go to state 19


state 2

   24 exp: STRING .

    $default  reduce using rule 24 (exp)


state 3

   23 exp: INT .

    $default  reduce using rule 23 (exp)


state 4

   21 exp: LPAREN . exp SEMICOLON seq RPAREN
   22    | LPAREN . RPAREN
   51    | LPAREN . exp RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 20
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 21
    lvalue  go to state 14


state 5

   25 exp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 22
    lvalue  go to state 14


state 6

   44 exp: IF . exp THEN exp ELSE exp
   45    | IF . exp THEN exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 23
    lvalue  go to state 14


state 7

   46 exp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 24
    lvalue  go to state 14


state 8

   47 exp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 25


state 9

   49 exp: LET . decs IN seq END
   50    | LET . decs IN END

    FUNCTION  shift, and go to state 26
    VAR       shift, and go to state 27
    TYPE      shift, and go to state 28

    $default  reduce using rule 3 (decs)

    decs    go to state 29
    dec     go to state 30
    tydec   go to state 31
    vardec  go to state 32
    fundec  go to state 33


state 10

   48 exp: BREAK .

    $default  reduce using rule 48 (exp)


state 11

   20 exp: NIL .

    $default  reduce using rule 20 (exp)


state 12

    0 $accept: program . $end

    $end  shift, and go to state 34


state 13

    1 program: exp .
   28 exp: exp . PLUS exp
   29    | exp . MINUS exp
   30    | exp . TIMES exp
   31    | exp . DIVIDE exp
   32    | exp . EQ exp
   33    | exp . NEQ exp
   34    | exp . GT exp
   35    | exp . LT exp
   36    | exp . GE exp
   37    | exp . LE exp
   38    | exp . AND exp
   39    | exp . OR exp

    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38
    EQ      shift, and go to state 39
    NEQ     shift, and go to state 40
    LT      shift, and go to state 41
    LE      shift, and go to state 42
    GT      shift, and go to state 43
    GE      shift, and go to state 44
    AND     shift, and go to state 45
    OR      shift, and go to state 46

    $default  reduce using rule 1 (program)


state 14

   19 exp: lvalue .
   43    | lvalue . ASSIGN exp

    ASSIGN  shift, and go to state 47

    $default  reduce using rule 19 (exp)


state 15

   26 exp: ID LPAREN . RPAREN
   27    | ID LPAREN . parlist RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 48
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      go to state 49
    lvalue   go to state 14
    parlist  go to state 50


state 16

   42 exp: ID LBRACK . exp RBRACK OF exp
   54 lsuf: LBRACK . exp RBRACK lsuf

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 51
    lvalue  go to state 14


state 17

   40 exp: ID LBRACE . itemlist RBRACE
   41    | ID LBRACE . RBRACE

    ID      shift, and go to state 52
    RBRACE  shift, and go to state 53

    itemlist  go to state 54


state 18

   55 lsuf: DOT . ID lsuf

    ID  shift, and go to state 55


state 19

   52 lvalue: ID lsuf .

    $default  reduce using rule 52 (lvalue)


state 20

   22 exp: LPAREN RPAREN .

    $default  reduce using rule 22 (exp)


state 21

   21 exp: LPAREN exp . SEMICOLON seq RPAREN
   28    | exp . PLUS exp
   29    | exp . MINUS exp
   30    | exp . TIMES exp
   31    | exp . DIVIDE exp
   32    | exp . EQ exp
   33    | exp . NEQ exp
   34    | exp . GT exp
   35    | exp . LT exp
   36    | exp . GE exp
   37    | exp . LE exp
   38    | exp . AND exp
   39    | exp . OR exp
   51    | LPAREN exp . RPAREN

    SEMICOLON  shift, and go to state 56
    RPAREN     shift, and go to state 57
    PLUS       shift, and go to state 35
    MINUS      shift, and go to state 36
    TIMES      shift, and go to state 37
    DIVIDE     shift, and go to state 38
    EQ         shift, and go to state 39
    NEQ        shift, and go to state 40
    LT         shift, and go to state 41
    LE         shift, and go to state 42
    GT         shift, and go to state 43
    GE         shift, and go to state 44
    AND        shift, and go to state 45
    OR         shift, and go to state 46


state 22

   25 exp: MINUS exp .
   28    | exp . PLUS exp
   29    | exp . MINUS exp
   30    | exp . TIMES exp
   31    | exp . DIVIDE exp
   32    | exp . EQ exp
   33    | exp . NEQ exp
   34    | exp . GT exp
   35    | exp . LT exp
   36    | exp . GE exp
   37    | exp . LE exp
   38    | exp . AND exp
   39    | exp . OR exp

    $default  reduce using rule 25 (exp)


state 23

   28 exp: exp . PLUS exp
   29    | exp . MINUS exp
   30    | exp . TIMES exp
   31    | exp . DIVIDE exp
   32    | exp . EQ exp
   33    | exp . NEQ exp
   34    | exp . GT exp
   35    | exp . LT exp
   36    | exp . GE exp
   37    | exp . LE exp
   38    | exp . AND exp
   39    | exp . OR exp
   44    | IF exp . THEN exp ELSE exp
   45    | IF exp . THEN exp

    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38
    EQ      shift, and go to state 39
    NEQ     shift, and go to state 40
    LT      shift, and go to state 41
    LE      shift, and go to state 42
    GT      shift, and go to state 43
    GE      shift, and go to state 44
    AND     shift, and go to state 45
    OR      shift, and go to state 46
    THEN    shift, and go to state 58


state 24

   28 exp: exp . PLUS exp
   29    | exp . MINUS exp
   30    | exp . TIMES exp
   31    | exp . DIVIDE exp
   32    | exp . EQ exp
   33    | exp . NEQ exp
   34    | exp . GT exp
   35    | exp . LT exp
   36    | exp . GE exp
   37    | exp . LE exp
   38    | exp . AND exp
   39    | exp . OR exp
   46    | WHILE exp . DO exp

    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38
    EQ      shift, and go to state 39
    NEQ     shift, and go to state 40
    LT      shift, and go to state 41
    LE      shift, and go to state 42
    GT      shift, and go to state 43
    GE      shift, and go to state 44
    AND     shift, and go to state 45
    OR      shift, and go to state 46
    DO      shift, and go to state 59


state 25

   47 exp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 60


state 26

   17 fundec: FUNCTION . ID LPAREN tyfields RPAREN EQ exp
   18       | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp

    ID  shift, and go to state 61


state 27

   15 vardec: VAR . ID ASSIGN exp
   16       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 62


state 28

    7 tydec: TYPE . ID EQ ty

    ID  shift, and go to state 63


state 29

   49 exp: LET decs . IN seq END
   50    | LET decs . IN END

    IN  shift, and go to state 64


state 30

    2 decs: dec . decs

    FUNCTION  shift, and go to state 26
    VAR       shift, and go to state 27
    TYPE      shift, and go to state 28

    $default  reduce using rule 3 (decs)

    decs    go to state 65
    dec     go to state 30
    tydec   go to state 31
    vardec  go to state 32
    fundec  go to state 33


state 31

    4 dec: tydec .

    $default  reduce using rule 4 (dec)


state 32

    5 dec: vardec .

    $default  reduce using rule 5 (dec)


state 33

    6 dec: fundec .

    $default  reduce using rule 6 (dec)


state 34

    0 $accept: program $end .

    $default  accept


state 35

   28 exp: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 66
    lvalue  go to state 14


state 36

   29 exp: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 67
    lvalue  go to state 14


state 37

   30 exp: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 68
    lvalue  go to state 14


state 38

   31 exp: exp DIVIDE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 69
    lvalue  go to state 14


state 39

   32 exp: exp EQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 70
    lvalue  go to state 14


state 40

   33 exp: exp NEQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 71
    lvalue  go to state 14


state 41

   35 exp: exp LT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 72
    lvalue  go to state 14


state 42

   37 exp: exp LE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 73
    lvalue  go to state 14


state 43

   34 exp: exp GT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 74
    lvalue  go to state 14


state 44

   36 exp: exp GE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 75
    lvalue  go to state 14


state 45

   38 exp: exp AND . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 76
    lvalue  go to state 14


state 46

   39 exp: exp OR . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 77
    lvalue  go to state 14


state 47

   43 exp: lvalue ASSIGN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 78
    lvalue  go to state 14


state 48

   26 exp: ID LPAREN RPAREN .

    $default  reduce using rule 26 (exp)


state 49

   28 exp: exp . PLUS exp
   29    | exp . MINUS exp
   30    | exp . TIMES exp
   31    | exp . DIVIDE exp
   32    | exp . EQ exp
   33    | exp . NEQ exp
   34    | exp . GT exp
   35    | exp . LT exp
   36    | exp . GE exp
   37    | exp . LE exp
   38    | exp . AND exp
   39    | exp . OR exp
   58 parlist: exp .

    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38
    EQ      shift, and go to state 39
    NEQ     shift, and go to state 40
    LT      shift, and go to state 41
    LE      shift, and go to state 42
    GT      shift, and go to state 43
    GE      shift, and go to state 44
    AND     shift, and go to state 45
    OR      shift, and go to state 46

    $default  reduce using rule 58 (parlist)


state 50

   27 exp: ID LPAREN parlist . RPAREN
   59 parlist: parlist . COMMA exp

    COMMA   shift, and go to state 79
    RPAREN  shift, and go to state 80


state 51

   28 exp: exp . PLUS exp
   29    | exp . MINUS exp
   30    | exp . TIMES exp
   31    | exp . DIVIDE exp
   32    | exp . EQ exp
   33    | exp . NEQ exp
   34    | exp . GT exp
   35    | exp . LT exp
   36    | exp . GE exp
   37    | exp . LE exp
   38    | exp . AND exp
   39    | exp . OR exp
   42    | ID LBRACK exp . RBRACK OF exp
   54 lsuf: LBRACK exp . RBRACK lsuf

    RBRACK  shift, and go to state 81
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38
    EQ      shift, and go to state 39
    NEQ     shift, and go to state 40
    LT      shift, and go to state 41
    LE      shift, and go to state 42
    GT      shift, and go to state 43
    GE      shift, and go to state 44
    AND     shift, and go to state 45
    OR      shift, and go to state 46


state 52

   60 itemlist: ID . EQ exp

    EQ  shift, and go to state 82


state 53

   41 exp: ID LBRACE RBRACE .

    $default  reduce using rule 41 (exp)


state 54

   40 exp: ID LBRACE itemlist . RBRACE
   61 itemlist: itemlist . COMMA ID EQ exp

    COMMA   shift, and go to state 83
    RBRACE  shift, and go to state 84


state 55

   55 lsuf: DOT ID . lsuf

    LBRACK  shift, and go to state 85
    DOT     shift, and go to state 18

    $default  reduce using rule 53 (lsuf)

    lsuf  go to state 86


state 56

   21 exp: LPAREN exp SEMICOLON . seq RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 87
    lvalue  go to state 14
    seq     go to state 88


state 57

   51 exp: LPAREN exp RPAREN .

    $default  reduce using rule 51 (exp)


state 58

   44 exp: IF exp THEN . exp ELSE exp
   45    | IF exp THEN . exp
